Dodano style do widoku StronaWyboru.

--- a/Zegar/Zegar/Widoki/StronaWyboru.xaml
+++ b/Zegar/Zegar/Widoki/StronaWyboru.xaml
@@ -2,8 +2,8 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Zegar.Widoki.StronaWyboru"
-            xmlns:local="clr-namespace:Zegar.Widoki">
-    <local:StronaZegar Title="Zegar"></local:StronaZegar>
-    <local:StronaAlarm Title="Alarm"></local:StronaAlarm>
-    <local:StronaMinutnik Title="Minutnik"></local:StronaMinutnik>
+            xmlns:local="clr-namespace:Zegar.Widoki" BarBackgroundColor="White" BarTextColor="DarkGray">
+    <local:StronaZegar Title="Zegar" BackgroundColor="DarkGray"></local:StronaZegar>
+    <local:StronaAlarm Title="Alarm" BackgroundColor="DarkGray"></local:StronaAlarm>
+    <local:StronaMinutnik Title="Minutnik" BackgroundColor="DarkGray"></local:StronaMinutnik>
 </TabbedPage>
