Dodano część wizualną do pliku StronaWyboru (zmieniono tło wybranych plików), oraz dodano część wizualną dla pliku StronaZegar.

--- a/Zegar/Zegar/Widoki/StronaWyboru.xaml
+++ b/Zegar/Zegar/Widoki/StronaWyboru.xaml
@@ -2,7 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Zegar.Widoki.StronaWyboru"
-            xmlns:local="clr-namespace:Zegar.Widoki" BarBackgroundColor="White" BarTextColor="DarkGray">
+            xmlns:local="clr-namespace:Zegar.Widoki" BarBackgroundColor="White" BarTextColor="DarkGray" SelectedTabColor="LightGray">
     <local:StronaZegar Title="Zegar" BackgroundColor="DarkGray"></local:StronaZegar>
     <local:StronaAlarm Title="Alarm" BackgroundColor="DarkGray"></local:StronaAlarm>
     <local:StronaMinutnik Title="Minutnik" BackgroundColor="DarkGray"></local:StronaMinutnik>
