--- a/Zegar/Zegar/Widoki/StronaMinutnik.xaml
+++ b/Zegar/Zegar/Widoki/StronaMinutnik.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Zegar.Widoki.StronaMinutnik">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <StackLayout Orientation="Vertical" VerticalOptions="Center" HorizontalOptions="Center">
+                <Label Text="Ustaw czas: " FontSize="20" TextColor="White"></Label>
+                <TimePicker x:Name="czasTP" Format="hh:mm" TextColor="White" WidthRequest="200"></TimePicker>
+                <Label x:Name="liczonyCzasTXT" Margin="0,20,0,20" HorizontalOptions="Center" Text="00:00" FontSize="30" TextColor="White"></Label>
+                <Button x:Name="StartBTN" Clicked="StartBTN_Clicked" CornerRadius="30" Text="Start" TextColor="DarkGray" BackgroundColor="White"></Button>
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
