--- a/Zegar/Zegar/Widoki/StronaZegar.xaml
+++ b/Zegar/Zegar/Widoki/StronaZegar.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Zegar.Widoki.StronaZegar">
+             x:Class="Zegar.Widoki.StronaZegar" NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <Grid>
             <StackLayout Orientation="Vertical" VerticalOptions="Center" HorizontalOptions="Center">
                 <Label x:Name="godzinaTXT" HorizontalOptions="Center" TextColor="White" FontSize="35" Text="08:56:20"></Label>
                 <Label x:Name="dataTXT" HorizontalOptions="Center"  TextColor="White" FontSize="15" Text="04 March 2023"></Label>
+                <Button BackgroundColor="White" TextColor="Gray" Text="Zapisz" x:Name="Zapisz" Clicked="Zapisz_Clicked"></Button>
+                <Button BackgroundColor="White" TextColor="Gray" Text="Pokaż zapisane" x:Name="PokazZapisane" Clicked="PokazZapisane_Clicked"></Button>
             </StackLayout>
         </Grid>
     </ContentPage.Content>
